--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,17 @@ services:
     image: rabbitmq:3-management-alpine
     container_name: rabbitmq
     ports:
-        - 5672:5672
-        - 15672:15672
+      - 5672:5672
+      - 15672:15672
+    networks: 
+      - ws-playground
+  push-registry:
+    image: 'bitnami/redis:6.2'
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    container_name: push-registry
+    ports: 
+      - 6379:6379
     networks: 
       - ws-playground
 networks:
