remove closed connection from map memory;

--- a/config.json
+++ b/config.json
@@ -1,4 +1,6 @@
 {
   "pushRegistryHost": "127.0.0.1",
-  "pushRegistryPort": 6379
+  "pushRegistryPort": 6379,
+  "brokerHost": "127.0.0.1",
+  "brokerPort": 5672
 }
